# mid-seunji-2025431229

./: requirements.txt  streamlit_app.py
ohms-law-circuit-simulator/: README.md  pyproject.toml
ohms-law-circuit-simulator/app/: main.py
ohms-law-circuit-simulator/app/components/: plotting.py  widgets.py
ohms-law-circuit-simulator/app/data/: sample_circuits.json
ohms-law-circuit-simulator/app/pages/: circuit_simulator.py  ohms_law.py
ohms-law-circuit-simulator/app/simulations/: circuit.py  solver.py
ohms-law-circuit-simulator/app/utils/: helpers.py
ohms-law-circuit-simulator/tests/: test_circuit.py  test_ohms.py
