[tool.poetry]
name = "ohms-law-circuit-simulator"
version = "0.1.0"
description = "A web application for simulating Ohm's Law and electrical circuits using Streamlit."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0.0"
numpy = "^1.21.0"
matplotlib = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"